--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -4,24 +4,20 @@
             <h1><%= title %> Page</h1>
             <form>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                    <label for="userName">Name</label>
+                    <input type="text" id="userName" placeholder="Name" />
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label for="userEmail">Email address</label>
+                    <input type="email" class="form-control" id="userEmail" placeholder="Email">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputFile">File input</label>
-                    <input type="file" id="exampleInputFile">
-                    <p class="help-block">Example block-level help text here.</p>
+                    <label for="comments">Comments</label>
+                    <input type="text" id="comments" placeholder="Put your comments here." />
                 </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Check me out
-                    </label>
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">
+                    <a href="/landing">Submit</a>
+                </button>
             </form>
         </main>
         <% include partials/footer.ejs %>
