--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo Goes Here</a>
+      <a class="navbar-brand" href="#"><i class="fa fa-code fa-lg"></i></a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">    
@@ -16,33 +16,15 @@
         <% if(title === "Home") { %>  
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/products">Products</a></li>
-            <li><a href="/services">Services</a></li>
-            <li><a href="/about">About Us</a></li>
             <li><a href="/contact">Contact Us</a></li>
-        <% } else if(title == "Products") { %>
+        <% } else if(title == "People") { %>
             <li><a href="/">Home</a></li>
-            <li class="active"><a href="/products">Products</a></li>
-            <li><a href="/services">Services</a></li>
-            <li><a href="/about">About Us</a></li>
+            <li class="active"><a href="/people">People</a></li>
             <li><a href="/contact">Contact Us</a></li>
-        <% } else if(title == "Services") { %>
+        <% } else if(title == "Contact") { %>
             <li><a href="/">Home</a></li>
-            <li><a href="/products">Products</a></li>
-            <li class="active"><a href="/services">Services</a></li>
-            <li><a href="/about">About Us</a></li>
-            <li><a href="/contact">Contact Us</a></li>
-        <% } else if(title == "About") { %>
-            <li><a href="/">Home</a></li>
-            <li><a href="/products">Products</a></li>
-            <li><a href="/services">Services</a></li>
-            <li class="active"><a href="/about">About Us</a></li>
-            <li><a href="/contact">Contact Us</a></li>
-         <% } else if(title == "Contact") { %>
-            <li><a href="/">Home</a></li>
-            <li><a href="/products">Products</a></li>
-            <li><a href="/services">Services</a></li>
-            <li><a href="/about">About Us</a></li>
-            <li class="active"><a href="/contact">Contact Us</a></li>
+            <li><a href="/people">People</a></li>
+            <li class="active"><a href="/contact">Contact</a></li>
          <% } %>
       </ul>
     </div><!-- /.navbar-collapse -->
