--- a/server/views/people.ejs
+++ b/server/views/people.ejs
@@ -1,7 +1,7 @@
 <% include partials/header.ejs %>
 <% include partials/navbar.ejs %>
     <main class="container">
-        <h1><%= title %> Page</h1>
+        <h1>My Favourite People - Who They Are</h1>
     </main>
 <% include partials/footer.ejs %>
     
