Added content to templates

--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,3 +1,10 @@
+<!-- 
+   file; error.ejs
+   author; Josh Mineiro
+   website; http://comp2068-midterm-jm.azurewebsites.net
+   description; error .ejs template
+-->
+
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
