--- a/server/views/landing.ejs
+++ b/server/views/landing.ejs
@@ -1,7 +1,15 @@
+<!-- 
+   file; landing.ejs
+   author; Josh Mineiro
+   website; http://comp2068-midterm-jm.azurewebsites.net
+   description; home page .ejs template
+-->
+
 <% include partials/header.ejs %>
 <% include partials/navbar.ejs %>
     <main class="container">
         <h1>My Favourite People</h1>
+        <% include partials/images.ejs %>
     </main>
 <% include partials/footer.ejs %>
     
