--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -1,3 +1,10 @@
+<!-- 
+   file; contact.ejs
+   author; Josh Mineiro
+   website; http://comp2068-midterm-jm.azurewebsites.net
+   description; contact .ejs template
+ -->
+
 <% include partials/header.ejs %>
     <% include partials/navbar.ejs %>
         <main class="container">
