Fixed navbar + images

--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -15,12 +15,12 @@
       <ul class="nav navbar-nav navbar-right">
         <% if(title === "Home") { %>  
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/products">Products</a></li>
-            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/people">People</a></li>
+            <li><a href="/contact">Contact</a></li>
         <% } else if(title == "People") { %>
             <li><a href="/">Home</a></li>
             <li class="active"><a href="/people">People</a></li>
-            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/contact">Contact</a></li>
         <% } else if(title == "Contact") { %>
             <li><a href="/">Home</a></li>
             <li><a href="/people">People</a></li>
