--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -12,7 +12,7 @@
             <form>
                 <div class="form-group">
                     <label for="userName">Name</label>
-                    <input type="text" id="userName" placeholder="Name" />
+                    <input type="text" class=" form-control" id="userName" placeholder="Name" />
                 </div>
                 <div class="form-group">
                     <label for="userEmail">Email address</label>
@@ -20,10 +20,10 @@
                 </div>
                 <div class="form-group">
                     <label for="comments">Comments</label>
-                    <input type="text" id="comments" placeholder="Put your comments here." />
+                    <input type="text" class="form-control" id="comments" placeholder="Put your comments here." />
                 </div>
                 <button type="submit" class="btn btn-default">
-                    <a href="/landing">Submit</a>
+                    <a href="/">Submit</a>
                 </button>
             </form>
         </main>
