final touches, styling

--- a/server/views/landing.ejs
+++ b/server/views/landing.ejs
@@ -9,7 +9,10 @@
 <% include partials/navbar.ejs %>
     <main class="container">
         <h1>My Favourite People</h1>
-        <% include partials/images.ejs %>
+        <center>
+            <img src="http://www.joblo.com/newsimages1/BadAssretrobanner.jpg" class="img-rounded" 
+            alt="badass" height="300" width="900">
+        </center>
     </main>
 <% include partials/footer.ejs %>
     
