--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,3 +1,10 @@
+<!-- 
+   file; footer.ejs
+   author; Josh Mineiro
+   website; http://comp2068-midterm-jm.azurewebsites.net
+   description; footer partial injected into .ejs templates
+-->
+
     <!-- JavaScript Section -->
     <script src="Scripts/lib/jquery/dist/jquery.min.js"></script>
     <script src="Scripts/lib/bootstrap/dist/js/bootstrap.min.js"></script>
