--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -1,3 +1,10 @@
+<!-- 
+   file; navbar.ejs
+   author; Josh Mineiro
+   website; http://comp2068-midterm-jm.azurewebsites.net
+   description; navbar partial injected into .ejs templates - adds navigation
+-->
+
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
