--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,3 +1,10 @@
+<!-- 
+   file; header.ejs
+   author; Josh Mineiro
+   website; http://comp2068-midterm-jm.azurewebsites.net
+   description; header partial injected into .ejs templates
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
