--- a/server/views/partials/images.ejs
+++ b/server/views/partials/images.ejs
@@ -5,9 +5,11 @@
    description; images partial injected into landing and people templates
 -->
 
+<center>
 <img src="http://assets.rollingstone.com/assets/images/story/why-audiences-still-root-for-walter-white-20130927/092713-bb-623-1380292976.jpg" 
-align="left" alt="Walter White" style="max-height: 300px; max-width: 300px;">
+class="img-rounded" alt="Walter White" align="left" style="max-height: 300px; max-width: 300px;">
 <img src="http://www.eonline.com/eol_images/Entire_Site/2015023/rs_560x415-150123073624-1024.Terry-Crews-Old-Spice.jl.012315.jpg" 
-align="middle" alt="Terry Crews" style="max-height: 100px; max-width: 100px;">
-<img src="http://cinematicmusicgroup.com/blog/wp-content/uploads/2015/07/Joey_Website-900x600.jpg" 
-align="right" alt="Joey Bada$$" style="max-height: 100px; max-width: 100px;"><br />
+class="img-rounded" alt="Terry Crews" style="max-height: 300px; max-width: 300px;">
+<img src="http://images.complex.com/complex/image/upload/svedxofup9rnsmgwd8wo.jpg" 
+class="img-rounded" alt="Joey Bada$$" align="right" style="max-height: 300px; max-width: 300px;">
+</center>
